# instagram_dm_mcp

./: .gitignore  env.example  pyproject.toml  readme.md  requirements.txt  setup_env.py
src/: mcp_server.py
